# Shop

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  db.docker-compose.yml  dev.docker-compose.yml  docker-compose.yml  nodb.docker-compose.yml  prod.docker-compose.yml  script.bat
auth/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
auth/app/: EnvArrayProcessor.py  __init__.py  auth.py  database.py  routes.py  utils.py
auth/prefill/: Readme.md
auth/src/: __main__.py
auth/src/application/: __init__.py
auth/src/application/services/: __init__.py  auth_service.py
auth/src/config/: __init__.py  config.py  env.py
auth/src/domain/: auth.py  models.py  repository.py  utils.py
auth/src/domain/interfaces/: __init__.py  user_repository.py
auth/src/domain/models/: user.py
auth/src/infrastructure/: database.py
auth/src/infrastructure/db/: __init__.py  session.py
auth/src/infrastructure/http/: __init__.py  data_service_client.py  user_repository_http.py
auth/src/presentation/: app.py  routes.py
auth/src/presentation/routers/: __init__.py  dependences.py  info.py  login.py  logout.py  protected_route.py  register.py
auth/src/schemas/: schemas.py
cart/: Dockerfile  main.py  pyproject.toml  requirements.txt
cart/app/: auth.py  database.py  models.py  schemas.py
cart/src/: __main__.py
cart/src/config/: __init__.py  config.py  env.py
cart/src/domain/: repository.py
cart/src/domain/models/: __init__.py  (+1 more)
cart/src/presentation/: __init__.py  app.py  catch_exception_middleware.py
cart/src/schemas/: schemas.py
(+206 files in other folders)
